//
// Copyright (C) 2016-present Instructure, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

// @flow

import 'react-native'
import React from 'react'
import SectionHeader from '../SectionHeader'

import renderer from 'react-test-renderer'

test('render', () => {
  let header = renderer.create(
    <SectionHeader
      title='Header'
      key='key' />
  )
  expect(header.toJSON()).toMatchSnapshot()
})

test('render without key', () => {
  let header = renderer.create(
    <SectionHeader
      title='Header'
      top={true} />
  )
  expect(header.toJSON()).toMatchSnapshot()
})
